@@ -1,3 +1,8 @@
+Tue Jan 20 15:30:08 1998  Mario Weilguni  <mario@loki.valhalla.at>
+
+	* runtests.cpp: gpppdata is now saved after modifications in
+	runtests(), and the default log viewer is set correctly
+
 Tue Jan 20 03:10:35 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>
 
 	* tried to get the docking window to display tooltip with transfer
